# rhythm

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v1.0.0.md  build.sh
gui/: engine_bridge.lua  game_state.lua  main.lua  test_bridge.lua  test_bridge_audio.lua  test_visualizer.lua
gui/ui/: controls.lua  player.lua  visualizer.lua
include/: audio_converter.h  audio_player.h  cli.h  common.h  playlist.h
include/cli/: cli.h
include/core/: audio_converter.h  audio_player.h  playlist.h  rhythm_engine.h
src/: main.c  playlist.c
src/cli/: cli.c  main_cli.c
src/core/: audio_converter.c  audio_player.c  playlist.c  rhythm_engine.c
src/gui/: main_gui.c
src/player/: audio_converter.c  audio_player.c
src/ui/: cli.c
tests/unit/: test_rhythm_engine.c
